--- a/antr_bringup/config/nav2_config.yaml
+++ b/antr_bringup/config/nav2_config.yaml
@@ -69,9 +69,9 @@ controller_server:
   ros__parameters:
     controller_frequency: 20.0
     costmap_update_timeout: 0.30
-    min_x_velocity_threshold: 0.001
-    min_y_velocity_threshold: 0.5
-    min_theta_velocity_threshold: 0.001
+    min_x_velocity_threshold: 0.1
+    min_y_velocity_threshold: 0.1
+    min_theta_velocity_threshold: 0.01
     failure_tolerance: 0.3
     progress_checker_plugins: ["progress_checker"]
     goal_checker_plugins: ["general_goal_checker"] # "precise_goal_checker"
@@ -195,11 +195,15 @@ local_costmap:
       height: 3
       resolution: 0.05
       robot_radius: 0.5
-      plugins: ["static_layer"]
+      plugins: ["static_layer","inflation layer"]
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
         subscribe_to_updates: True
+      inflation layer:
+        plugin: "nav2_costmap_2d::InflationLayer"
+        cost_scaling_factor: 10.0
+        inflation_radius: 0.55
       always_send_full_costmap: True
 
 global_costmap:
